<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.icatproject</groupId>
	<artifactId>icat.server</artifactId>
	<version>6.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>ICAT Server</name>
	<description>A metadata catalogue to support Large Facility experimental data, 
	linking all aspects of the research chain from proposal through to publication.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.scm.id>github</project.scm.id>
		<repoUrl>https://repo.icatproject.org/repo</repoUrl>
		<gitUrl>https://github.com/icatproject/icat.server</gitUrl>
	</properties>

	<repositories>
		<repository>
			<id>ICAT Repo</id>
			<url>${repoUrl}</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>miredot</id>
			<name>MireDot Releases</name>
			<url>https://secure-nexus.miredot.com/content/repositories/miredot</url>
		</pluginRepository>
	</pluginRepositories>

	<scm>
		<connection>scm:git:${gitUrl}.git</connection>
		<developerConnection>scm:git:${gitUrl}.git</developerConnection>
		<url>${gitUrl}</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<url>${gitUrl}/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<organization>
		<name>The ICAT Collaboration</name>
		<url>https://www.icatproject.org</url>
	</organization>

	<distributionManagement>
		<downloadUrl>${repoUrl}</downloadUrl>
		<site>
			<id>repo.icatproject.org</id>
			<url>dav:https://repo.icatproject.org/site/icat/server/${project.version}</url>
		</site>
		<repository>
			<id>repo.icatproject.org</id>
			<url>dav:${repoUrl}</url>
		</repository>
	</distributionManagement>

	<dependencies>

		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>10.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.authentication</artifactId>
			<version>5.0.0</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.13</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>4.0.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.parsson</groupId>
			<artifactId>parsson</artifactId>
			<version>1.1.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.utils</artifactId>
			<version>4.16.1</version>
		</dependency>

		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.client</artifactId>
			<version>6.0.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.5.13</version>
		</dependency>

	</dependencies>

	<build>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>2.10</version>
			</extension>
		</extensions>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>com.qmino</groupId>
				<artifactId>miredot-plugin</artifactId>
				<version>2.4.4-Java11</version>
				<executions>
					<execution>
						<id>miredot</id>
						<goals>
							<goal>restdoc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<licence>cHJvamVjdHxvcmcuaWNhdHByb2plY3QuaWNhdC5zZXJ2ZXJ8MjAyNi0wNS0xOHxmYWxzZXwtMSNNQ3dDRkZXcUlJclhWL0lobXRnakIzYUg5Q2VmNENsSUFoUmIrLzRZWjB1Tm4vOVRrdkU4NnVqenJSRWVUZz09</licence>
					<output>
						<html>
							<location>site/miredot</location>
							<baseUrl>https://example.com/icat</baseUrl>
							<intro>miredot.intro.html</intro>
						</html>
					</output>
					<analysis>
						<checks>
							<JAVADOC_MISSING_EXCEPTION_DOCUMENTATION>failbuild</JAVADOC_MISSING_EXCEPTION_DOCUMENTATION>
							<REST_UNMAPPED_EXCEPTION>ignore</REST_UNMAPPED_EXCEPTION>
							<JAVADOC_MISSING_SUMMARY>failbuild</JAVADOC_MISSING_SUMMARY>
							<JAVADOC_MISSING_INTERFACEDOCUMENTATION>failbuild</JAVADOC_MISSING_INTERFACEDOCUMENTATION>
							<JAVADOC_MISSING_PARAMETER_DOCUMENTATION>failbuild</JAVADOC_MISSING_PARAMETER_DOCUMENTATION>
							<JAVADOC_MISSING_AUTHORS>ignore</JAVADOC_MISSING_AUTHORS>
							<JAXRS_MISSING_PRODUCES>failbuild</JAXRS_MISSING_PRODUCES>
							<JAXRS_MISSING_CONSUMES>failbuild</JAXRS_MISSING_CONSUMES>
							<JAXRS_MISSING_PATH_PARAM>failbuild</JAXRS_MISSING_PATH_PARAM>
							<UNREACHABLE_RESOURCE>failbuild</UNREACHABLE_RESOURCE>
							<PARTIAL_RESOURCE_OVERLAP>failbuild</PARTIAL_RESOURCE_OVERLAP>
						</checks>
					</analysis>
					<restModel>
						<restFramework>
							<name>jakarta</name>
						</restFramework>
					</restModel>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<workingDirectory>${basedir}/src/test/config</workingDirectory>
					<excludes>
						<exclude>
							**/integration/*.java
						</exclude>

					</excludes>
					<systemPropertyVariables>
						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
						<luceneUrl>${luceneUrl}</luceneUrl>
					</systemPropertyVariables>
					<testFailureIgnore>false</testFailureIgnore>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<includes>
						<include>**/integration/Test*.java</include>
					</includes>

					<systemPropertyVariables>
						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
						<serverUrl>${serverUrl}</serverUrl>
						<luceneUrl>${luceneUrl}</luceneUrl>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<release>11</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>v@{project.version}</tagNameFormat>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.5.0</version>
				<executions>
					<execution>
						<id>Generate doc</id>
						<phase>process-classes</phase>
						<configuration>
							<classpathScope>compile</classpathScope>
							<mainClass>org.icatproject.core.DocGenerator</mainClass>
							<arguments>
								<argument>${basedir}</argument>
							</arguments>
							<systemProperties>
								<systemProperty>
									<key>log4j.configuration</key>
									<value>other.properties</value>
								</systemProperty>
							</systemProperties>
						</configuration>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>

					<execution>
						<id>Install .war</id>
						<phase>pre-integration-test</phase>

						<configuration>
							<skip>${maven.install.skip}</skip>
							<executable>python3</executable>
							<arguments>
								<argument>src/test/scripts/prepare_test.py</argument>
								<argument>${containerHome}</argument>
								<argument>${serverUrl}</argument>
								<argument>${luceneUrl}</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<descriptors>
						<descriptor>src/assemble/distribution.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>


		</plugins>

	</build>

	<reporting>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>dependencies</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>plugins</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

		</plugins>
	</reporting>

</project>



